--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is version 4.0</h1>
+    <h1>This is final version 10</h1>
 </body>
 </html>
